# fun

./: .aiignore  .clang-format  .clang-tidy  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  Doxygen.in  LICENSE  Makefile  README.md  README_DEV.md  demo.fun  draft.fun  fun.fun  make  play.fun
.github/workflows/: cmake-ubuntu-22.04.yml  cmake-ubuntu-latest.yml
cmake/: Dependencies.cmake  Options.cmake  Targets.cmake
cmake/Extensions/: CURL.cmake  Extensions.cmake  INI.cmake  JSON.cmake  KCGI.cmake  LIBRESSL.cmake  LIBSQL.cmake  NOTCURSES.cmake  OPENSSL.cmake  PCRE2.cmake  PCSC.cmake  REDIS.cmake  REPL.cmake  SQLITE.cmake  TCLTK.cmake  XML2.cmake
cmake/Platform/: Linux.cmake  Windows.cmake  macOS.cmake
docs/: README.md  arrays.md  asyncio.md  build.md  bytecode-format.md  cli.md  contributing.md  embedding.md  errors-and-diagnostics.md  examples.md  faq.md  fun.md  funstx.md  handbook.md  httpserver.md  includes.md  internals.md  maps.md  numbers.md  opcodes.md  performance.md  repl.md  roadmap.md  rust.md  security-and-sandboxing.md  stdlib.md  strings.md  style-guide.md  testing.md  troubleshooting.md  types.md  website.md  writing-tests.md
docs/examples/: README.md  builtins_extended.md  builtins_maps_and_more.md  byte_for_demo.md  byte_overflow_try_catch.md  cast_demo.md  class_constructor.md  class_test.md  class_without_object.md  classes_demo.md  cli_argv_dump.md  conversions_showcase.md  cpp_add.md  datetime_basic.md  datetime_extended.md  datetime_timer.md  echo_example.md  env_all.md  error_handling.md  expressions_test.md  features.md  file_print_for_file_line_by_line.md  floats.md  for_range_test.md  functions_test.md  have_fun.md  have_fun_function.md  hex_example.md  if_else_test.md  include_lib.md  include_local.md  include_local_util.md  inheritance_demo.md  loops_break_continue.md  maps.md  match.md  namespaced_mod.md  nested_loops.md  objects_basic.md  objects_more.md  (+40 more)
examples/: README.md  arrays.fun  arrays_advanced.fun  arrays_iter.fun  base64_demo.fun  boolean_decl.fun  booleans.fun  builtins_conversions.fun  builtins_extended.fun  builtins_maps_and_more.fun  byte_for_demo.fun  byte_overflow_try_catch.fun  cast_demo.fun  class_constructor.fun  class_test.fun  class_without_object.fun  classes_demo.fun  cli_argv_dump.fun  cli_parse_example.fun  console_prompt.fun  conversions_showcase.fun  cpp_add.fun  crc32_demo.fun  crc32_example.fun  crc32c_example.fun  curl_download.fun  curl_get_json.fun  curl_post.fun  datetime_basic.fun  datetime_extended.fun  datetime_timer.fun  debug_reporting.fun  echo_example.fun  env_all.fun  error_handling.fun  exit_example.fun  expression_test.fun  expressions_test.fun  fail.fun  features.fun  (+106 more)
examples/algos/: deduplicate.fun  sort_and_search.fun  stack_queue.fun
examples/arrays/: arrays.fun  arrays_advanced.fun
examples/basics/: boolean_decl.fun  booleans.fun  builtins_conversions.fun  collections.fun  fibonacci.fun  fizzbuzz.fun  hello_world.fun
examples/blocking/: http_server_cgi.fun  tcp_echo_server_class.fun
examples/broken/: await_http_client.fun  complex_nested_no_capture.fun  ripemd160.fun  ripemd160_example.fun
examples/cgi/: hello_kcgi.fun
examples/cli/: args_parse.fun  cli_parse_example.fun  env_echo.fun
examples/compose/: pipeline.fun  run_other_fun.fun
examples/config/: ini_diag.fun
examples/crypto/: aes256.fun  libressl_ripemd160.fun  libressl_sha256.fun  openssl_md5.fun  openssl_ripemd160.fun  openssl_sha256.fun  openssl_sha512.fun  ripemd160_demo.fun  ripemd160_example.fun  sha1_demo.fun  sha256_demo.fun  sha512_str_demo.fun
examples/data/: catalog.xml  complex.ini  complex.json  database.sql  employees.xml  example.xml  ns_example.xml  sample.csv  subsections.ini
examples/error/: debug_reporting.fun  exit_example.fun  fail.fun  include_line_mapping_test.fun  test_indent.fun  try_catch_with_error.fun
examples/extra/: curl_download.fun  curl_get_json.fun  curl_post.fun  http_server.fun  http_server_test.fun  ini_class_demo.fun  ini_demo.fun  libsql_example.fun  notcurses_menu.fun  notcurses_progress.fun  pcre2_demo.fun  pcre2_opcodes.fun  pcsc2_example.fun  pcsc_example.fun  tcp_echo_server.fun  tk_hello.fun  tk_testing.fun  xml_minimal.fun
examples/functions/: nested_functions.fun  nested_no_capture.fun
examples/interactive/: input_example.fun  input_hidden_example.fun  input_hidden_pam_auth.fun
examples/io/: async_http_client.fun  await_http_client.fun  csv_reader.fun  file_io.fun  read_write_file.fun  word_count.fun
examples/math/: math_exp_log.fun  math_floor.fun  math_round.fun  math_sign.fun  math_trunc.fun
examples/net/: http_mt_server.fun  http_mt_server_cgi.fun  http_server_cgi.fun  http_server_cgi_lib.fun  http_server_test.fun  http_static_server.fun  irc_channel_demo.fun  irc_echo_bot.fun  irc_interactive.fun  irc_minimal.fun
examples/patterns/: assert_like.fun  logging_min.fun
examples/snippets/: escape_html_demo.fun  include_namespace.fun  maps_iterate.fun  nested.fun  parse_test2.fun
examples/sqlited/: README.md  (+1 more)
history/: 0.1.0-print.fun  0.2.0-shebang-comments-strings-integers-booleans-identifiers-simple-assignments-globals-print.fun
lib/: README.md  arrays.fun  cli.fun  hello.fun  hex.fun  math.fun  regex.fun  strings.fun
man/: fun.1  funstx.1
scripts/: check_op_includes.py  play  play.fun  run_examples.sh
spec/: draft.fun  v0.1.md  v0.2.md  v0.3.md  v0.4.md
src/: CMakeLists.txt  array_utils.c  builtins_io.c  builtins_iter.c  builtins_math.c  builtins_string.c  bytecode.c  bytecode.h  fun.c  fun_test.c  funstx.c  iter.c  jsonc.c  main.c  map.c  opcode_names.c  parser.c  parser.h  parser_utils.c  pcsc.c  repl.c  repl.h  str_utils.c  string.c  test_opcodes.c  tk_embed.c  value.c  value.h  vm.c  vm.h  vm_case_abs.inc  vm_case_add.inc  vm_case_and.inc  vm_case_arr_insert.c  vm_case_arr_pop.inc  vm_case_arr_push.c  vm_case_arr_remove.c  vm_case_arr_set.inc  vm_case_call.inc  vm_case_clamp.c  (+40 more)
src/rust/: Cargo.toml  eh_personality.c
src/rust/src/: lib.rs
src/rust/src/vm/: mod.rs
web/: Makefile  _config.yml  index.md
(+521 files in other folders)
